--- a/templates/registration/recover_pass.html
+++ b/templates/registration/recover_pass.html
@@ -18,7 +18,7 @@
         <div class="circle-loader">
             <div class="checkmark draw"></div>
         </div>
-        <h6>لطفا صبر کنید ...</h6>
+        <h6 dir="rtl">لطفا صبر کنید ...</h6>
     </div>
     <div class="recover-pass-container">
         <div class="card-center-image">
