show resume have bug in getting data from server

--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -5,7 +5,10 @@
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
          aria-orientation="vertical">
         {% if comments %}
-
+            <a class='nav-link active' data-toggle='pill' role='tab' aria-controls='v-pills-home' aria-selected='true'
+                id="v-pills-expert-1">
+                سپهر متانت
+            </a>
         {% endif %}
     </div>
 </div>
