set the email address & password

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -166,7 +166,7 @@
                                                                         <span>بودجه</span>
                                                                     </div>
                                                                     <div id="budget-content">
-                                                                        <span class="budget-amount">5,000,000</span>
+                                                                        <span class="budget-amount">{{ project.project_form.required_budget }}</span>
                                                                         <span>ریال</span>
                                                                     </div>
                                                                 </div>
