--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -27,7 +27,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label for="id_project_title_persian">عنوان پروژه (به فارسی)</label>
+                                    <label for="id_persian_title">عنوان پروژه (به فارسی)</label>
                                     {% if form.persian_title.errors %}
                                         {% render_field form.persian_title class="error w-100" %}
                                     {% else %}
