center vertical expert web scraping loading  modal

--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -17,7 +17,7 @@
     <div class="modal fade" id="waitToGet" data-backdrop="static" tabindex="-1" role="dialog"
          aria-labelledby="waitToGetLabel"
          aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header"></div>
                 <div class="modal-body text-center">
